feat: add run chat model api
