# spring-ai-alibaba-studio/src/main/java/com/alibaba/cloud/ai/service/ChatModelDelegate.java
@@ -21,4 +21,8 @@ public interface ChatModelDelegate {
 		return null;
 	}
 
+	default String runImageGenTask(RunActionParam runActionParam) {
+		return null;
+	}
+
 }
